### 0.12.5 (2017-01-25) (pmant) add dropdown menu to views bar (pmant) sort widgets widget selector by name (bluefox) fix groupAttr in signals and visibility

--- a/www/css/vis-editor.css
+++ b/www/css/vis-editor.css
@@ -1080,7 +1080,9 @@ td > .select_active_widget :nth-child(2) {
     z-index: 999;
 }
 .group-edit-close {
-    float: right;
+    position: absolute;
+    top: 5px;
+    right: 3px;
 }
 
 /*------------------------- context menu ------------------------------------*/
